--- a/README
+++ b/README
@@ -22,7 +22,7 @@ In Home Assistant the sensors can look like this:
     state_topic: "EspSparsnasGateway/values"
     name: "House energy usage"
     unit_of_measurement: "W"
-    value_template: '{{ float(value_json.effect) }}'
+    value_template: '{{ float(value_json.effect) | round(0)  }}'
     
   - platform: mqtt
     state_topic: "EspSparsnasGateway/values"
@@ -35,3 +35,6 @@ We then get these sensors:
 -sensor.house_energy_meter_batt
 -sensor.house_energy_usage
 
+The code is based on Sommarlovs version of Ludvig Strigeus code. 
+http://elektronikforumet.com/forum/viewtopic.php?f=2&t=85006&start=255
+https://github.com/strigeus/sparsnas_decoder
