Added debug, updated readme

--- a/README
+++ b/README
@@ -15,6 +15,8 @@ The data sent via Mqtt is in Json format and looks like this:
 
 {"seq":13688,"power":2024,"total":1821.344,"battery":100}
 
+###### Home Assistant
+The Mqtt data can be used anywhere, here's an example for the Home Automation software Home Assistant.
 In Home Assistant the sensors can look like this:
 
 # Sparnas energy monitor
@@ -34,6 +36,11 @@ We then get these sensors:
 
 -sensor.house_energy_meter_batt
 -sensor.house_energy_usage
+
+The result can be seen in SparsnasHass.png. 
+
+###### Hardware
+The hardware used is a Esp8266-based wifi-enabled Mcu. You can use different devices like a Wemos Mini or a Nodemcu, but take care of the Gpio labels that can differ. The receiver is a RFM69B radio transciever. I use a 868MHz device, but a 900MHz should work as well. To this a simple antenna is connected, I use a straight wire, 86 millimeters long connected to the RFM's Ant-connection. The wire shall be vertical, standing up. 
 
 The code is based on Sommarlovs version of Ludvig Strigeus code. 
 http://elektronikforumet.com/forum/viewtopic.php?f=2&t=85006&start=255
