--- a/README
+++ b/README
@@ -53,6 +53,8 @@ D6	- Gpio12
 D7	- Gpio13
 D8	- Gpio15
 
+Also add two capacitors, 330-470uF and 100nF, to Vin in and Gnd for stability. 
+
 The code is based on Sommarlovs version of Ludvig Strigeus code. 
 http://elektronikforumet.com/forum/viewtopic.php?f=2&t=85006&start=255
 https://github.com/strigeus/sparsnas_decoder
