--- a/README
+++ b/README
@@ -55,7 +55,7 @@ D8	- Gpio15
 
 ## Hardware hacks to ensure good RF performance.
 Also add two capacitors, 330-470uF and 100nF, to Vin in and Gnd for stability.
-Keep the wires between the RFM69 module as short as possible and DO NOT make them 8 cm long hence that calculates into 1/4 wavelenth of 868 MHz.
+Keep the wires between the RFM69 module and the NodeMCU as short as possible and DO NOT make them 8 cm long hence that calculates into 1/4 wavelenth of 868 MHz.
 You will experiance interference and very poor performance if the above is not applied and followed.
 
 The code is based on Sommarlovs version of Ludvig Strigeus code. 
