--- a/README
+++ b/README
@@ -58,6 +58,18 @@ Also add two capacitors, 330-470uF and 100nF, to Vin in and Gnd for stability.
 Keep the wires between the RFM69 module and the NodeMCU as short as possible and DO NOT make them 8 cm long hence that calculates into 1/4 wavelenth of 868 MHz.
 You will experiance interference and very poor performance if the above is not applied and followed.
 
+If you want to learn more about the Rfm69 and get some tips & tricks, look at https://learn.sparkfun.com/tutorials/rfm69hcw-hookup-guide.
+
+## If it doesn't work
+As usual, check your connections one more time. If possible, solder the connections. Also make sure to use a good power supply, both the Esp and the Rfm69 want's that. 
+With some RFM's a software adjustment can be tested if the code doesn't work. Line 191 looks like this:
+/* 0x19 */ {REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_16 | RF_RXBW_EXP_4}, // p26 in datasheet, filters out noise
+You can try to change this to:
+ /* 0x19 */ {REG_RXBW, RF_RXBW_DCCFREQ_010 | RF_RXBW_MANT_16 | RF_RXBW_EXP_3}, // p26 in datasheet, filters out noise
+
+This makes the channel filter wider, 62.5khz instead of 31.3khz.
+ 
+
 The code is based on Sommarlovs version of Ludvig Strigeus code. 
 http://elektronikforumet.com/forum/viewtopic.php?f=2&t=85006&start=255
 https://github.com/strigeus/sparsnas_decoder
